2004-12-22  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-base.c:
	* src/yelp-db-pager.c:
	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- Various bits of cleanup from Don Scorgie

2004-12-22  Shaun McCance  <shaunm@gnome.org>

	* data/icons/Makefile.am:
	* data/icons/yelp-watermark-blockquote.xcf
	* data/icons/yelp-watermark-blockquote-00AB.png
	* data/icons/yelp-watermark-blockquote-00BB.png
	* data/icons/yelp-watermark-blockquote-201C.png
	* data/icons/yelp-watermark-blockquote-201D.png
	* data/icons/yelp-watermark-blockquote-201E.png
	- Added a single XCF to store the blockquote watermarks
	- Added watermark for U+201D

2004-12-15  Shaun McCance  <shaunm@gnome.org>

	* data/scrollkeeper.xml:
	- Put a11y stuff in Accessibility (duh)

	* data/ui/yelp-ui.xml:
	* data/ui/yelp.glade:
	* src/Makefile.am:
	* src/yelp-bookmarks.c:
	* src/yelp-bookmarks.h:
	* src/yelp-base.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- First pass at bookmarks

2004-12-11  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-man-pager.c:
	* src/yelp-man-pager.h:
	- Made yelp-man-pager use yelp-xslt-pager

2004-12-11  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	* src/yelp-window.c:
	* src/yelp-xslt-pager.c:
	* src/yelp-xslt-pager.h:
	- Added yelp-xslt-pager.[ch] to abstract out common pager stuff

2004-12-09  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-base.c:
	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	- More robust URI-ish input handling, fixes #160635

2004-12-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-utils.c:
	* src/yelp-window.c:
	- Hooked up reload, at least for DocBook

2004-12-05  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- About dialog work from Luca Ferretti

2004-12-05  Shaun McCance  <shaunm@gnome.org>

	* data/man.xml.in: