@@ -31,7 +31,11 @@
 #include <string.h>
 #include <gtk/gtkuimanager.h>
 #include <gtk/gtkliststore.h>
+#include <gtk/gtktreemodel.h>
+#include <gdk/gdkkeysyms.h>
 #include <glade/glade.h>
+#include <libxml/xmlwriter.h>
+#include <libxml/xmlreader.h>
 
 #ifdef YELP_DEBUG
 #define d(x) x
@@ -47,17 +51,22 @@
 
 static GSList *windows;
 static GtkListStore *actions_store;
+static gboolean dup_flag;
 
 typedef struct _YelpWindowData YelpWindowData;
 struct _YelpWindowData {
     YelpWindow *window;
+    guint merge_id;
     GtkActionGroup *toc_actions;
     GtkActionGroup *doc_actions;
 };
 
 static void      window_add_bookmark        (YelpWindowData *window,
 					     gchar          *name,
-					     gchar          *label);
+					     const gchar    *label);
+static void      window_remove_bookmark_menu(YelpWindowData *data);
+static void      window_remove_action       (YelpWindowData *data,
+					     gchar          *name);
 static gboolean  bookmarks_unregister       (YelpWindow     *window,
 					     GdkEvent       *event,
 					     gpointer        user_data);
@@ -67,24 +76,50 @@ static void      action_activated_cb        (GtkActionGroup *group,
 static gboolean  row_is_separator           (GtkTreeModel   *model,
 					     GtkTreeIter    *iter,
 					     gpointer        user_data);
+void             bookmarks_rebuild_menus    (void);
+void             bookmarks_edit_name_cb     (GtkTreeView       *treeview,
+					     GtkTreePath       *path,
+					     GtkTreeViewColumn *col,
+					     gpointer           user_data);
+void             bookmarks_edit_response_cb (GtkDialog         *dialog,
+					     gint               response,
+					     gpointer           user_data);
+void             bookmarks_key_event_cb     (GtkWidget         *widget,
+					     GdkEventKey       *event,
+					     gpointer           user_data);
+
+static gboolean  bookmarks_read             (void);
+
+void             bookmarks_add_seperator    (void);
+
+gboolean         bookmarks_dup_finder       (GtkTreeModel   *model,
+					     GtkTreePath    *path,
+					     GtkTreeIter    *iter,
+					     gpointer        data);
 
 void
 yelp_bookmarks_init (void)
 {
     GtkTreeIter  iter;
-
+    gboolean read;
+    
     windows = NULL;
     actions_store = gtk_list_store_new (3,
 					G_TYPE_STRING,
 					G_TYPE_STRING,
 					G_TYPE_BOOLEAN);
 
-    gtk_list_store_append (actions_store, &iter);
-    gtk_list_store_set (actions_store, &iter,
-			COL_NAME,  NULL,
-			COL_LABEL, NULL,
-			COL_SEP,   TRUE,
-			-1);
+    read = bookmarks_read ();
+    
+    if (!read) {
+	gtk_list_store_append (actions_store, &iter);
+
+	gtk_list_store_set (actions_store, &iter,
+			    COL_NAME,  NULL,
+			    COL_LABEL, NULL,
+			    COL_SEP,   TRUE,
+			    -1);
+    }
 }
 
 void
@@ -104,6 +139,7 @@ yelp_bookmarks_register (YelpWindow *window)
     data->window = window;
     data->toc_actions = gtk_action_group_new ("BookmarksTOC");
     data->doc_actions = gtk_action_group_new ("BookmarksDOC");
+    data->merge_id = gtk_ui_manager_new_merge_id(ui_manager);
 
     gtk_ui_manager_insert_action_group (ui_manager, data->toc_actions, 1);
     gtk_ui_manager_insert_action_group (ui_manager, data->doc_actions, 2);
@@ -139,23 +175,224 @@ yelp_bookmarks_register (YelpWindow *window)
     windows = g_slist_append (windows, data);
 }
 
-
-void yelp_bookmarks_add (gchar *uri, gchar *title)
+void bookmarks_add_seperator (void)
 {
-    GtkTreeIter  iter;
-    GSList      *cur;
-
-    g_print ("I know bookmarks aren't being saved.  Don't file a bug.\n");
+    GtkTreeIter iter;
 
     gtk_list_store_append (actions_store, &iter);
     gtk_list_store_set (actions_store, &iter,
-			COL_NAME,  uri,
-			COL_LABEL, title,
-			COL_SEP,   FALSE,
+			COL_NAME,  NULL,
+			COL_LABEL, NULL,
+			COL_SEP,   TRUE,
+			-1);
+}
+
+gboolean 
+bookmarks_dup_finder (GtkTreeModel *model, GtkTreePath *path,
+		      GtkTreeIter *iter, gpointer data)
+{
+    gchar *uri = data;
+    gchar *current_uri;
+
+    gtk_tree_model_get (model, iter,
+			COL_NAME, &current_uri, -1);
+    if (current_uri && g_str_equal (current_uri, uri)) {
+	dup_flag = TRUE;
+	return TRUE;
+    }
+    return FALSE;
+}
+
+
+void yelp_bookmarks_add (gchar *uri, const gchar *title, gboolean save)
+{
+    GtkTreeIter  iter;
+    GSList      *cur;
+    
+    dup_flag = FALSE;
+    gtk_tree_model_foreach (GTK_TREE_MODEL (actions_store),
+			    bookmarks_dup_finder, uri);
+    if (!dup_flag) {
+	gtk_list_store_append (actions_store, &iter);
+	gtk_list_store_set (actions_store, &iter,
+			    COL_NAME,  uri,
+			    COL_LABEL, title,
+			    COL_SEP,   FALSE,
+			    -1);
+	
+	if (save) {
+	    for (cur = windows; cur != NULL; cur = cur->next) {
+		window_add_bookmark ((YelpWindowData *) cur->data, uri, title);
+	    }
+	    yelp_bookmarks_write ();
+	}
+    }
+}
+
+void
+bookmarks_edit_response_cb (GtkDialog *dialog, gint response, 
+			    gpointer user_data)
+{
+    gtk_widget_hide (GTK_WIDGET (dialog));
+    if ( response == GTK_RESPONSE_ACCEPT){
+	GList *children = 
+	    gtk_container_get_children (GTK_CONTAINER (dialog->vbox));
+	GtkEntry *entry = children->data;
+	gchar *new_title = (gchar *) gtk_entry_get_text (entry);
+	GtkTreePath *path = (GtkTreePath *) user_data;
+	GtkTreeIter it;
+	
+	gtk_tree_model_get_iter (GTK_TREE_MODEL (actions_store), &it, path);
+	gtk_list_store_set (actions_store, &it,
+			    COL_LABEL, new_title,
+			    -1);
+	bookmarks_rebuild_menus ();
+    }	
+}
+
+void
+window_remove_bookmark_menu (YelpWindowData *data)
+{
+    GtkUIManager *ui_manager;
+
+    ui_manager = yelp_window_get_ui_manager (data->window);
+
+    gtk_ui_manager_remove_ui (ui_manager, data->merge_id);
+
+    data->merge_id = gtk_ui_manager_new_merge_id (ui_manager);
+
+    gtk_ui_manager_ensure_update (ui_manager);
+}
+
+void
+window_remove_action (YelpWindowData *data, gchar *name)
+{
+    GtkAction *action = gtk_action_group_get_action (data->toc_actions, name);
+    if (action) {
+	gtk_action_group_remove_action (data->toc_actions, action);
+    }
+    else {
+	action = gtk_action_group_get_action (data->doc_actions, name);
+	if (action) {
+	    gtk_action_group_remove_action (data->doc_actions, action);
+	}
+    }
+}
+
+void
+bookmarks_rebuild_menus (void)
+{
+    GSList      *cur;
+    gboolean ret;
+    GtkTreeIter iter;
+
+    for (cur = windows; cur != NULL; cur = cur->next) {
+	window_remove_bookmark_menu ((YelpWindowData *) cur->data);
+    }
+
+    ret = gtk_tree_model_get_iter_first (GTK_TREE_MODEL (actions_store), 
+					 &iter);
+    while (ret) {
+	gchar *name, *label;
+	gboolean sep;
+
+	gtk_tree_model_get (GTK_TREE_MODEL (actions_store), &iter,
+			    COL_NAME,  &name,
+			    COL_LABEL, &label,
+			    COL_SEP,   &sep,
+			    -1);
+	if (!sep) {
+	    for (cur = windows; cur != NULL; cur = cur->next) {
+		window_remove_action (cur->data, name);
+		window_add_bookmark (cur->data, name, label);
+	    }
+	}
+	g_free (name);
+	g_free (label);
+
+	ret = gtk_tree_model_iter_next (GTK_TREE_MODEL (actions_store), 
+					&iter);
+
+    }
+    yelp_bookmarks_write ();
+}
+
+void bookmarks_key_event_cb (GtkWidget *widget, GdkEventKey *event,
+			     gpointer user_data)
+{
+    GtkTreeView *view = GTK_TREE_VIEW (widget);
+    GtkTreePath *path;
+    GtkTreeSelection *sel;
+    GtkTreeModel *model;
+    GtkTreeIter iter;
+    
+    model = gtk_tree_view_get_model (view);
+    sel = gtk_tree_view_get_selection (view);
+    
+    gtk_tree_selection_get_selected (sel, &model, &iter);
+    path = gtk_tree_model_get_path (model, &iter);
+
+    switch (event->keyval) {
+    case GDK_BackSpace:
+    case GDK_Delete:
+	gtk_list_store_remove (actions_store, &iter);
+	bookmarks_rebuild_menus ();
+	break;
+    case GDK_Return:
+    case GDK_KP_Enter:
+	bookmarks_edit_name_cb (view, path, NULL, NULL);
+	break;
+    case GDK_Up:
+	gtk_tree_path_prev (path);
+	gtk_tree_selection_select_path (sel, path);
+	break;
+    case GDK_Down:
+	gtk_tree_path_next (path);
+	gtk_tree_selection_select_path (sel, path);
+	break;
+    default:
+	break;
+    }
+
+}
+
+
+void
+bookmarks_edit_name_cb (GtkTreeView *treeview, GtkTreePath *path,
+			GtkTreeViewColumn *col,
+			gpointer user_data)
+{
+    GtkTreeIter iter;
+    gchar *name;
+    gchar *title;
+    GtkDialog *edit;
+    GtkWidget *entry;
+    
+    gtk_tree_model_get_iter (GTK_TREE_MODEL (actions_store), &iter, path);
+
+    gtk_tree_model_get (GTK_TREE_MODEL (actions_store), &iter,
+			COL_NAME, &name,
+			COL_LABEL, &title,
 			-1);
 
-    for (cur = windows; cur != NULL; cur = cur->next)
-	window_add_bookmark ((YelpWindowData *) cur->data, uri, title);
+    edit = gtk_dialog_new_with_buttons ("Edit bookmark name",
+					NULL,
+					GTK_DIALOG_MODAL,
+					GTK_STOCK_OK,
+					GTK_RESPONSE_ACCEPT,
+					GTK_STOCK_CANCEL,
+					GTK_RESPONSE_REJECT,
+					NULL);
+    entry = gtk_entry_new ();
+    gtk_entry_set_text (GTK_ENTRY (entry), title);
+    gtk_container_add (GTK_CONTAINER (GTK_DIALOG(edit)->vbox),
+                      entry);
+    g_signal_connect (edit, "response", 
+		      G_CALLBACK (bookmarks_edit_response_cb), 
+		      gtk_tree_path_copy(path));
+    gtk_widget_show_all (GTK_WIDGET (edit));
+
+    return;
 }
 
 void
@@ -164,6 +401,7 @@ yelp_bookmarks_edit (void)
     GladeXML    *glade;
     GtkWidget   *dialog;
     GtkTreeView *view;
+    GtkTreeSelection *select;
 
     glade = glade_xml_new (DATADIR "/yelp/ui/yelp.glade",
 			   "bookmarks_dialog",
@@ -187,7 +425,18 @@ yelp_bookmarks_edit (void)
 	 NULL);
     gtk_tree_view_set_row_separator_func (view, row_is_separator, NULL, NULL);
 
-    gtk_tree_view_set_model (view, actions_store);
+    gtk_tree_view_set_model (view, GTK_TREE_MODEL (actions_store));
+
+    select = gtk_tree_view_get_selection (GTK_TREE_VIEW (view));
+
+    gtk_tree_selection_set_mode (select, GTK_SELECTION_SINGLE);
+
+    g_signal_connect (G_OBJECT (view), "row-activated",
+		      G_CALLBACK (bookmarks_edit_name_cb),
+		      NULL); 
+    g_signal_connect (G_OBJECT (view), "key-press-event",
+		      G_CALLBACK (bookmarks_key_event_cb),
+		      NULL);
 
     g_object_unref (glade);
 
@@ -197,13 +446,118 @@ yelp_bookmarks_edit (void)
 void
 yelp_bookmarks_write (void)
 {
+    xmlTextWriterPtr file;
+    gint rc;
+    GtkTreeIter iter;
+    gboolean res;
+    gchar *filename;
+
+    filename = g_build_filename (g_get_home_dir (), ".gnome2", 
+				 "yelp-bookmarks", NULL);
+
+    file = xmlNewTextWriterFilename (filename, 
+				     0);
+    if(!file) {
+	g_warning ("Could not create bookmark file %s", filename);
+	return;
+    }
+
+    rc = xmlTextWriterStartDocument (file, NULL, NULL, NULL);
+    rc = xmlTextWriterStartElement (file, BAD_CAST "Body");
+    rc = xmlTextWriterWriteComment (file, BAD_CAST "Yelp Bookmark file - "
+    "Do not edit directly");
+
+    rc = xmlTextWriterWriteAttribute(file, BAD_CAST "version",
+                                     BAD_CAST "1.0");
+    rc = xmlTextWriterWriteAttribute(file, BAD_CAST "xml:lang",
+                                     BAD_CAST "en_GB");
+
+    rc = xmlTextWriterStartElement (file, BAD_CAST "Bookmarks");
+
+    res = gtk_tree_model_get_iter_first (GTK_TREE_MODEL (actions_store),
+						  &iter);
+
+    while (res) 
+	{
+	    gchar *name;
+	    gchar *label;
+	    gboolean sep;
+	    gtk_tree_model_get (GTK_TREE_MODEL (actions_store), &iter,
+				COL_NAME, &name, 
+				COL_LABEL, &label,
+				COL_SEP, &sep, -1);
+	    
+	    xmlTextWriterStartElement (file, BAD_CAST "Entry");
+ 
+	    if (!sep) {
+		xmlTextWriterWriteAttribute (file, "name", name);
+		xmlTextWriterWriteAttribute (file, "label", label);
+	    } else {
+		xmlTextWriterWriteAttribute (file, "seperator", NULL);
+	    }
+
+	    xmlTextWriterEndElement (file);
+
+	    res = gtk_tree_model_iter_next (GTK_TREE_MODEL (actions_store), &iter);
+	    g_free (name);
+	    g_free (label);
+	}
+
+    rc = xmlTextWriterEndDocument(file);
+    xmlFreeTextWriter(file);
+    g_free (filename);
     return;
+}
+
+static gboolean
+bookmarks_read (void)
+{
+    xmlTextReaderPtr file;
+    gint ret;
+    gchar *filename;
+
+    filename = g_build_filename (g_get_home_dir (), ".gnome2", 
+				 "yelp-bookmarks", NULL);
+
+    file = xmlReaderForFile(filename, NULL, 0);
+
+    if (file == NULL)
+	return FALSE;
+
+    ret = xmlTextReaderRead (file);
+
+    while (ret) {
+	
+	if (xmlTextReaderHasAttributes (file)) {
+	    gchar *name;
+	    gchar *title;
+	    gchar *sep;
+	    
+	    name = xmlTextReaderGetAttribute (file, "name");
+	    title = xmlTextReaderGetAttribute (file, "label");
+	    sep = xmlTextReaderGetAttribute (file, "seperator");
+	    
+	    if (name && title) {
+		yelp_bookmarks_add (name, title, FALSE);
+	    }
+	    else if (sep) {
+		bookmarks_add_seperator ();
+	    }
+	    g_free (name);
+	    g_free (title);
+	    g_free (sep);
+	}
+	ret = xmlTextReaderRead (file);	
+    }
+    
+    xmlTextReaderClose (file);
+    return TRUE;
 }
 
 static void
 window_add_bookmark (YelpWindowData *data,
 		     gchar          *name,
-		     gchar          *label)
+		     const gchar    *label)
 {
     GtkUIManager *ui_manager;
     GtkAction    *action;
@@ -217,7 +571,7 @@ window_add_bookmark (YelpWindowData *data,
 				 action);
 
     gtk_ui_manager_add_ui (ui_manager,
-			   gtk_ui_manager_new_merge_id (ui_manager),
+			   data->merge_id,
 			   tocQ ? TOC_PATH : DOC_PATH,
 			   label, name,
 			   GTK_UI_MANAGER_MENUITEM,
