@@ -30,8 +30,9 @@
 
 void               yelp_bookmarks_init          (void);
 void               yelp_bookmarks_register      (YelpWindow   *window);
-void               yelp_bookmarks_add           (gchar        *title,
-						 gchar        *uri);
+void               yelp_bookmarks_add           (gchar        *uri,
+						 const gchar  *title,
+						 gboolean save);
 void               yelp_bookmarks_edit          (void);
 void               yelp_bookmarks_write         (void);
 
