@@ -1,5 +1,12 @@
 2004-12-22  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-bookmarks.c:
+	* src/yelp-bookmarks.h:
+	* src/yelp-window.c:
+	- More bookmarks work from Don Scorgie
+
+2004-12-22  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-base.c:
 	* src/yelp-db-pager.c:
 	* src/yelp-toc-pager.c:
